--- a/tp-2/pod.yml
+++ b/tp-2/pod.yml
@@ -2,11 +2,12 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: my-first-pod
+  labels:
+    app: simple-webapp
 spec:
   containers:
   - name: simple-webapp
     image: mmumshad/simple-webapp-color
     env:
-    - name: APP_COLOR
-      value: red
-
+      - name: APP_COLOR
+        value: red
